# encrypted-messager

./: .gitignore  Cargo.toml
src/: config.rs  error.rs  main.rs  model.rs
src/crypto/: key.rs  mod.rs
