[package]
name = "encrypted-messenger"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
chacha20poly1305 = "0.10.1"
dirs = "6.0.0"
hkdf = "0.12.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha256 = "1.6.0"
thiserror = "2"
x25519-dalek = { version = "2.0.1", features = ["static_secrets", "getrandom"] }
zeroize = "1.8.2"
